@@ -770,6 +770,10 @@ static const char help_text[] = MSGTR_Help;
 #define MSGTR_GUI_RearLeft "Rear left"
 #define MSGTR_GUI_RearRight "Rear right"
 #define MSGTR_GUI_Remove "Remove"
+#define MSGTR_GUI_Rotation "Rotation"
+#define MSGTR_GUI_Rotation180 "180°"
+#define MSGTR_GUI_Rotation90CCW "90° counterclockwise"
+#define MSGTR_GUI_Rotation90CW "90° clockwise"
 #define MSGTR_GUI_Saturation "Saturation"
 #define MSGTR_GUI_SaveWindowPositions "Save window positions"
 #define MSGTR_GUI_ScaleMode "Scale mode"
